tests/NormalTests/paczka1/small_fuzzy/56729080.err
Error in line 1: eZsBjPW A61 86,8
Error in line 5: 75djk7eW S4|7 2|,8
Error in line 2: xBX A61 70,1
Error in line 11: xBX A404 45,4
Error in line 9: 75djk7eW A404 34,5
